[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/ui/MenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/main menu/Settings.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/font_size_40.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/ui/font_size_25.tres" type="DynamicFont" id=4]

[node name="Credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="RichTextLabel" parent="."]
margin_right = 200.0
margin_bottom = 60.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "CREDITS"
text = "CREDITS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="."]
margin_top = 75.0
margin_right = 247.0
margin_bottom = 396.0
custom_fonts/font = ExtResource( 4 )
text = "Programming, Art and Game Design:
   Zethru Brandino a.k.a. Vic Ben


Plugin:
   Visual Behavior Tree by fian46

Font:
   Lady Ice by Apostrophic Labs

Tools:
   Krita, Bfxr and Godot Engine"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkYoutube" parent="." instance=ExtResource( 1 )]
margin_left = 13.0
margin_top = 141.0
margin_right = 105.0
margin_bottom = 180.0
text = "YT channel"

[node name="LinkTwitter" parent="." instance=ExtResource( 1 )]
margin_left = 108.0
margin_top = 141.0
margin_right = 200.0
margin_bottom = 180.0
text = "Twitter"

[node name="LinkItch" parent="." instance=ExtResource( 1 )]
margin_left = 174.0
margin_top = 141.0
margin_right = 266.0
margin_bottom = 180.0
text = "Itch"

[node name="Back" parent="." instance=ExtResource( 1 )]
margin_top = 580.0
margin_right = 74.0
margin_bottom = 619.0
custom_fonts/font = ExtResource( 3 )
text = "<BACK"
[connection signal="pressed" from="LinkYoutube" to="." method="_on_LinkYoutube_pressed"]
[connection signal="pressed" from="LinkTwitter" to="." method="_on_LinkTwitter_pressed"]
[connection signal="pressed" from="LinkItch" to="." method="_on_LinkItch_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
